# spgb

./: .gitignore  LICENSE  Makefile  README.md  TODO.org  gpu.cc  index.md  main.cc  main.fsx  main.hh  main_back.cc  memory.hh  play.html  registers.hh
core/: OPCODES_TABLE  OPCODES_TABLE_1  audio.cc  cart.hh  cpu.cc  cpu.hh  debug.cc  debug.hh  disassemble.cc  dma.cc  dma.hh  gpu.cc  instructions.cc  instructions.hh  io.cc  io.hh  main.cc  main.hh  make_opcodes.py  memory.cc  memory.hh  op_table.cc  opcodes.cc  opcodes.csv  opcodes.py  opcodes.txt  platform_unix.hh  platform_win32.hh  ppu.cc  ppu.hh  registers.cc  registers.hh  table_opcodes.csv  tests.cc  timer.cc  timer.hh  ui_remote.cc  ui_remote.hh  utils.cc  utils.hh  (+1 more)
core2/: CMakeLists.txt  boot_rom.hpp  generate_instruction_decode_table.py  generated_instruction_decode_table.inc  instruction_decoder.hpp  instruction_printer.hpp  instructions.hpp  main.cc  native_host.cc  opcode_table.csv  wasm_host.hpp
play/: .#main.js  audio.js  gb_emulator.wasm  renderer.js
sdlgui/: Makefile  sdlgui.cpp  sdlgui.h
src/: CMakeLists.txt  TODO.org  assembler.hpp  base.hpp  cart.hpp  cpu.hpp  debugger.hpp  emulator.cpp  emulator.hpp  executor.hpp  generate_instruction_decode_table.py  generated_instruction_decode_table.inc  host.cpp  host_wasm.cpp  index.html  instruction_decoder.cpp  instruction_decoder.hpp  instruction_printer.hpp  instruction_runner.cpp  instruction_runner.hpp  instruction_runner_new.hpp  instructions.cpp  instructions.hpp  io_ports.hpp  joypad.hpp  lib_gb.cpp  main.cc  main.cpp  memory_mapper.cpp  memory_mapper.hpp  native_host.cc  opcode_table.csv  opcodes.inc  platform.hh  platform.hpp  platform_base.cpp  platform_linux.cc  platform_linux.cpp  platform_shared.cc  platform_utils.cc  (+11 more)
src/build-win/: Makefile  build.bat  deps.Makefile
src/data/: bgbtest.hpp  blargg-03.hpp  blargg-04.hpp  blargg-05.hpp  blargg-06.hpp  cgb_boot.hpp
src/debug/: decoder.hpp  printer.hpp
src/emulator/: cart.hpp  joypad.hpp  mmu.cpp  mmu.hpp  ppu.cpp  ppu.hpp  timer.hpp
src/gb/: audio.cpp  audio.hpp  cart.hpp  cpu.hpp  emulator.cpp  emulator.hpp  executor.cpp  executor.hpp  graphics.cpp  graphics.hpp  io_ports.hpp  joypad.hpp  lib_gb.cpp  lib_gb.hpp  mmu.hpp  timer.hpp
src/js/: file_cache.js  main.js
src/linux/: main.cpp
src/platform_linux/: main.cpp
src/platform_windows/: main.cpp  main_limited.cpp  opengl_utils.hpp
src/system/: audio.hpp  cart.hpp  cpu.hpp  graphics.cpp  graphics.hpp  io_ports.hpp  joypad.hpp  mmu.cpp  mmu.hpp  ppu.cpp  ppu.hpp  timer.hpp
src/test/: test.cpp
src/utils/: audio_stream.cpp  audio_stream.hpp  log.hpp  printf.hpp  str.hpp
src/win32/: audio.hpp  main.cpp  main_limited.cpp  opengl_utils.hpp  wasapi_audio.hpp
wasmgui/: index.html
wasmgui/js/: file_cache.js  main.js
